--- a/PUBLIC/blog.html
+++ b/PUBLIC/blog.html
@@ -149,9 +149,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Bash Cheat Sheet</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -161,9 +159,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">CSS Cheat Sheet</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -173,9 +169,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Graph Cheat Sheet</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -185,9 +179,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">HTML Cheat Sheet</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -197,9 +189,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Javascript Cheat Sheet</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -209,9 +199,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -221,9 +209,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -233,9 +219,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -245,9 +229,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -257,9 +239,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -269,9 +249,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -281,9 +259,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -293,9 +269,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -305,9 +279,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -317,9 +289,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -329,9 +299,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -341,9 +309,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -353,9 +319,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -365,9 +329,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -377,9 +339,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -389,9 +349,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./other-pages/blog-posts/blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
