--- a/PUBLIC/other-pages/blog-posts/0-projects/projects.html
+++ b/PUBLIC/other-pages/blog-posts/0-projects/projects.html
@@ -80,13 +80,30 @@
         <h1 class="my-4">Student Projects
           <small>{Cool Stuff Here}</small>
         </h1>
+  <!--------------------------------------------White Space------------------------------------------------------>
+  <p>
+  <p>
+  <p>
+  <p>
+  <p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
+  </p>
+  </p>
+  </p>
+  </p>
+  </p>
+    <!--------------------------------------------White Space------------------------------------------------------>
         <!------------------------------------- Blog Post -------------------------------------->
         <div class="card mb-4">
-          <img class="card-img-top" src="https://github.com/appacademy-starters/oop-connect-four/blob/master/images/connect-four.png" alt="Card image cap">
+          <img class="card-img-top" src="https://lh3.googleusercontent.com/proxy/5Na-seftMJrtZvT9c4YFClRh0M30dWw-vfcXuOySrt_5_EPycj7KFq4v1b18_DR9xfCyOj3OxTEyefHftaN8ooPOBKvc0GE7mEABDGATVLgK" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Connect Four</h2>
-            <p class="card-text">A look into computational complexity and why we need to think in terms of Big O Notation</p>
+            <p class="card-text">connect four DOM project</p>
             <a class="btn" href="./../../weeks/week-5/connect-4/index.html" class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -100,10 +117,8 @@
         <div class="card mb-4">
           <img class="card-img-top" src="https://lh3.googleusercontent.com/proxy/lzzDIPBE0D4lJoCEJIRyrwc1bbwArQmtiVtjWtUYLESDABxkF0Ah1hqSadMqSlg7GDBG_S8kbh8c9R3Wpru4A8ReiTaVurfBnQB66PfTNW0JjQoDbn9rRL1y_w" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <h2 class="card-title">Audio Recorder</h2>
+            <p class="card-text">Simple web based audio recorder using jsweb-audio-recorder-library</p>
             <a class="btn" href="./web-audio-recorder/index.html" class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -112,10 +127,8 @@
         <div class="card mb-4">
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <h2 class="card-title"></h2>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -125,9 +138,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -137,9 +148,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -149,9 +158,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -161,9 +168,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -173,9 +178,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -185,9 +188,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -197,9 +198,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -209,9 +208,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -221,9 +218,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -233,9 +228,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -245,9 +238,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
@@ -257,9 +248,7 @@
           <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-              nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
-              possimus, veniam magni quis!</p>
+            <p class="card-text">Placeholder</p>
             <a class="btn" href="./../blog/catagories/Blog-Posts/ " class="btn btn-primary">Read More &rarr;</a>
           </div>
 
