--- a/PUBLIC/page-contact.html
+++ b/PUBLIC/page-contact.html
@@ -231,7 +231,8 @@
                                     to ask for clarification on a topic please feel free to leave a message</p>
                             </div><!-- end title -->
 
-                            <form class="big-contact-form" role="search">
+                            <form class="big-contact-form" role="search" type="file">
+                              <input type="hidden" name="form-name" value="name_of_my_form" />
                                 <input type="text" class="form-control" placeholder="Enter your name..">
                                 <input type="email" class="form-control" placeholder="Enter email..">
                                 <input type="text" class="form-control" placeholder="Your phone..">
@@ -260,7 +261,34 @@
         </script>
         <!-- MAP & CONTACT -->
         <script src="js/map.js"></script>
+<script async>
+  function encode(data) {
+    return Object.keys(data)
+        .map(key => encodeURIComponent(key) + "=" + encodeURIComponent(data[key]))
+        .join("&")
+  }
 
+const handleSubmit = (event) => {
+  event.preventDefault()
+  fetch("/", {
+    method: "POST",
+    headers: { "Content-Type": "application/x-www-form-urlencoded" },
+    body: encode({
+      "form-name": event.target.getAttribute("name"),
+      ...name
+    })
+  }).then(() => navigate("/thank-you/")).catch(error => alert(error))
+}
+return (
+  <form data-netlify="true" name="contact" method="post" onSubmit={handleSubmit}>
+    <input type="hidden" name="form-name" value="contact" />
+    <label>form
+      <input name="order" type="text" onChange={handleChange} />
+    </label>
+    <input type="submit"/>
+  </form>
+)
+</script>
 </body>
 
 </html>
